# qmpdclient

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Changelog  INSTALL  README  THANKSTO  qmpdclient.desktop  qmpdclient.pro  qmpdclient.qrc
icons/: COPYING  qmpdclient.icns  resource.rc
icons/crystal_amarok/: iconset.conf
icons/crystal_amarok/amarok/: COPYING
icons/crystal_amarok/crystal/: COPYING
icons/oxygen/: iconset.conf
lang/: cs_CZ.ts  de_DE.ts  es_ES.ts  fr_FR.ts  it_IT.ts  nl_NL.ts  nn_NO.ts  no_NO.ts  pt_BR.ts  ru_RU.ts  sv_SE.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts  zh_TW.ts
src/: aafilter.cpp  aafilter.h  aboutdialog.cpp  aboutdialog.h  abstractmodel.cpp  abstractmodel.h  abstractview.cpp  abstractview.h  abstractview_defn.h  abstractview_impl.h  albumview.cpp  albumview.h  artistview.cpp  artistview.h  clickablelabel.cpp  clickablelabel.h  config.cpp  config.h  controlpanel.cpp  controlpanel.h  coverartdialog.cpp  coverartdialog.h  debug.h  directorymodel.cpp  directorymodel.h  directorypanel.cpp  directorypanel.h  directoryview.cpp  directoryview.h  dynamicplaylist.cpp  dynamicplaylist.h  fileview.cpp  fileview.h  headerview.cpp  headerview.h  iconmanager.cpp  iconmanager.h  idealbar.cpp  idealbar.h  idealsplitter.cpp  (+168 more)
test/: genres.xml  playlist.txt  shoutcasttest.cpp  stations.xml  test.pro  test.qrc
ui/: aboutdialog.ui  addradiodialog.ui  controlpanel.ui  coverartdialog.ui  directorypanel.ui  jumptosongdialog.ui  librarypanel.ui  lyricsdialog.ui  mainwindow.ui  metainfodialog.ui  playlistpanel.ui  playlistspanel.ui  preferencesdialog.ui  radiopanel.ui  shoutcastpanel.ui
